--- a/grimoire/static/styles/components/_api.scss
+++ b/grimoire/static/styles/components/_api.scss
@@ -1,3 +1,7 @@
+.card.api {
+    overflow: hidden;
+}
+
 .endpoint {
     margin-bottom: 2em;
 }
